tests/snapshots/snapshot_test__snapshot_json_output.snap
---
source: tests/snapshot_test.rs
expression: output
---
{
  "version": 1,
  "files": [
    {
      "file": "tests/fixtures/exception/bad_empty_except.pas",
      "diagnostics": [
        {
          "rule_id": "empty-except",
          "severity": "warning",
          "message": "Empty except block silently swallows exceptions.",
          "line": 11,
          "column": 3,
          "end_line": 11,
          "end_column": 9,
          "help": "Add an exception handler or log the error. Use 'on E: Exception do ...' to handle specific exceptions.",
          "scope": "DoRisky"
        }
      ]
    }
  ]
}
