tests/snapshots/snapshot_test__snapshot_rule_local_variable_naming.snap
---
source: tests/snapshot_test.rs
expression: diagnostics
---
[
  {
    "rule_id": "local-variable-naming",
    "severity": "hint",
    "message": "Parameter 'BadParam' should use camelCase naming convention.",
    "line": 7,
    "column": 18,
    "end_line": 7,
    "end_column": 26,
    "help": "Rename 'BadParam' to follow camelCase convention."
  },
  {
    "rule_id": "local-variable-naming",
    "severity": "hint",
    "message": "Parameter 'AnotherParam' should use camelCase naming convention.",
    "line": 7,
    "column": 43,
    "end_line": 7,
    "end_column": 55,
    "help": "Rename 'AnotherParam' to follow camelCase convention."
  },
  {
    "rule_id": "local-variable-naming",
    "severity": "hint",
    "message": "Local variable 'MyCounter' should use camelCase naming convention.",
    "line": 9,
    "column": 3,
    "end_line": 9,
    "end_column": 12,
    "help": "Rename 'MyCounter' to follow camelCase convention."
  },
  {
    "rule_id": "local-variable-naming",
    "severity": "hint",
    "message": "Local variable 'AnotherBadName' should use camelCase naming convention.",
    "line": 10,
    "column": 3,
    "end_line": 10,
    "end_column": 17,
    "help": "Rename 'AnotherBadName' to follow camelCase convention."
  }
]
